InsuranceOrg/force-app/main/default/objects/vlocity_ins__InventoryItemDecompositionRelationship__c/fields/vlocity_ins__DestinationInventoryItemId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DestinationInventoryItemId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Destination Inventory Item</description>
    <label>Destination Inventory Item</label>
    <referenceTo>vlocity_ins__InventoryItem__c</referenceTo>
    <relationshipLabel>InventoryItemDecompositionRelationships</relationshipLabel>
    <relationshipName>InventoryItemDecompositionRelationships</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>