InsuranceOrg/force-app/main/default/objects/vlocity_ins__InventoryItemDecompositionRelationship__c/fields/vlocity_ins__SourceAssetId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SourceAssetId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Source Asset</description>
    <label>Source Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>InventoryItemDecompositionRelationships</relationshipLabel>
    <relationshipName>InventoryItemDecompositionRelationships</relationshipName>
    <type>Lookup</type>
</CustomField>